--- a/application/modules/user/views/scripts/auth/index.phtml
+++ b/application/modules/user/views/scripts/auth/index.phtml
@@ -33,27 +33,23 @@
 	<?php echo $this->form; ?>
 </div>
 
-
-
-
 <style>
-	
+	.btnsub {
+		padding-top:10px;
+	}
 	.cadastro-user {
 		width: 333px;
 		float: right;
-
 	}
-	
 </style>
-<div class="cadastro-user">
-	
+
+
+<!-- <div class="cadastro-user">
 	<h2>Novo usuário</h2>
 	<?php 
 	echo $this->formularioCadastro;
 	 ?>
-
-
-</div>
+</div> -->
 
 <script>
 	
