--- a/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
+++ b/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
@@ -32,9 +32,10 @@
 
 <br>
 
-<table class="table table-hover">
+<table class="table table-hover" id="tabela_usuarios">
 
 <tr>
+  <td><strong></strong></td>
 	<td><strong>Nome</strong></td>
 	<td><strong>E-mail</strong></td>
 	<td><strong>Tempo serviço</strong></td>
@@ -47,6 +48,7 @@
  foreach ($this->registros as $funcionarios):
 ?>
 	<tr>
+    <td> <input type="checkbox" name="vehicle" value="Bike" class="ck_user"> </td>
 		<td> <?php echo $funcionarios['nome']; ?> </td>
 		<td><?php echo $funcionarios['email']; ?></td>
 		<td><?php echo $this->funcoes->diff2(date("d/m/Y", strtotime($funcionarios['admissao']) ), date("d/m/Y") ) . ' dias'; ?></td>
@@ -63,6 +65,31 @@
  ?>
 
 </table>
+
+<script type="text/javascript">
+
+  //Procura usuários que estão selecionados, para cumprir com
+  //uma determinada ação
+  function procura_usuarios() {
+    var anchor = null;
+    var container;
+    var items;
+
+    container = document.getElementById('tabela_usuarios');
+    items = container.getElementsByTagName('input');
+
+    for (var j = 0; j < items.length; j++) {
+        var x = items[j].checked;
+        
+        //if (items[j].href === 'http://www.msn.com') {
+        //   anchor = items[j];
+        //    break;
+        //}
+    }
+  };
+  
+  procura_usuarios();
+</script>
 
 <?php
     echo $this->paginationControl(
