--- a/application/modules/user/views/scripts/grupos/visualizar.phtml
+++ b/application/modules/user/views/scripts/grupos/visualizar.phtml
@@ -37,8 +37,8 @@
 <tr>
 	<td><strong>Cliente</strong></td>
 	<td><strong>Código</strong></td>
-	<td>%</td>
-	<td><strong>Horas</strong></td>
+	<!-- <td>%</td>
+	<td><strong>Horas</strong></td> -->
 	<td><strong>Cadastro</strong></td>
 </tr>
 <br>
@@ -50,18 +50,18 @@
 		<td>
 			<a href="<?php echo $this->baseUrl("user/index/index/idgrupo/" . $grupo['id']); ?>"><?php echo $grupo['cod_grupo']; ?></a>
 		</td>
-		<td>
+		<!-- <td>
 		<?php //$p =$this->porcentagemgrupo($grupo['id']); ?>
-		<!-- <div class="progress">
+		<div class="progress">
 		  <div class="progress-bar" role="progressbar" aria-valuenow="<?php echo $p; ?>" aria-valuemin="0" aria-valuemax="100" style="width: <?php echo $p; ?>%;">
 		    <?php echo $p; ?>% completo
 		  </div>
-		</div> -->
+		</div>
 		
 		</td>
 		<td>
 			<?php //echo $this->gruposhoras($grupo['id']); ?>
-		</td>
+		</td> -->
 		<td>
 			<?php echo date( 'd/m/Y', strtotime($grupo['cadastro']) ); ?>
 		</td>
