--- a/application/modules/admin/views/scripts/ferramentas/mesclar.phtml
+++ b/application/modules/admin/views/scripts/ferramentas/mesclar.phtml
@@ -1,7 +1,10 @@
 
+<!-- 
+excel1
+ echo $this->baseUrl( -->
 
 
-<h3>Meclar arquivos Excel</h3>
+<h3>  <img src="<?php echo $this->baseUrl("images/excel2.png"); ?>" alt=""> Meclar arquivos Excel</h3>
 <hr />
 <?php 
 
@@ -9,9 +12,20 @@ echo $this->frm;
 
 
  ?>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
 
  <style>
 .btn {
-	margin-top: 10px;
+	margin-top: 91px;
+}
+
+.carr {
+	margin-top: 1px;
+	margin-bottom: 40px;
 }
  </style>
+
