Generate  xls file
by Samuel

--- a/application/modules/admin/views/scripts/ferramentas/mesclar.phtml
+++ b/application/modules/admin/views/scripts/ferramentas/mesclar.phtml
@@ -19,13 +19,21 @@ echo $this->frm;
  <br>
 
  <style>
+
+
 .btn {
-	margin-top: 91px;
+	margin-top: 11px;
 }
 
 .carr {
-	margin-top: 1px;
-	margin-bottom: 40px;
+	//margin-top: 1px;
+	//margin-bottom: 40px;
 }
+
+label {
+	margin-top: 33px;
+	
+}
+
  </style>
 
