--- a/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
+++ b/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
@@ -32,6 +32,21 @@
 
 <br>
 
+<style>
+  .selecionados {
+    background-color:#F5F5F5 ;
+    border: 1px dotted #c2c2c2;
+    border-radius: 10px;
+    padding:10px;
+  }
+</style>
+<div class="selecionados">
+  <b>Selecionados</b> <button onclick="procura_usuarios()">Excluir</button>
+</div>
+
+
+<br>
+
 <table class="table table-hover" id="tabela_usuarios">
 
 <tr>
@@ -48,7 +63,7 @@
  foreach ($this->registros as $funcionarios):
 ?>
 	<tr>
-    <td> <input type="checkbox" name="vehicle" value="Bike" class="ck_user"> </td>
+    <td> <input type="checkbox" name="vehicle" value="<?php echo $funcionarios['id_user'] ?>" class="ck_user"> </td>
 		<td> <?php echo $funcionarios['nome']; ?> </td>
 		<td><?php echo $funcionarios['email']; ?></td>
 		<td><?php echo $this->funcoes->diff2(date("d/m/Y", strtotime($funcionarios['admissao']) ), date("d/m/Y") ) . ' dias'; ?></td>
@@ -65,6 +80,8 @@
  ?>
 
 </table>
+
+
 
 <script type="text/javascript">
 
@@ -88,7 +105,7 @@
     }
   };
   
-  procura_usuarios();
+  //procura_usuarios();
 </script>
 
 <?php
