--- a/application/modules/admin/views/scripts/clientes/visualizar.phtml
+++ b/application/modules/admin/views/scripts/clientes/visualizar.phtml
@@ -33,9 +33,33 @@
 
 <br>
 
-<table class="table table-hover">
+<!-- Adaptação1 - Início -->
+<style>
+  .selecionados {
+    background-color:#F5F5F5 ;
+    border: 1px dotted #c2c2c2;
+    border-radius: 10px;
+    padding:10px;
+  }
+
+  .resultado {
+    color: #ff0000;
+    padding:10px;
+  }
+</style>
+<div class="selecionados">
+  <b>Selecionados</b> 
+  <button onclick="selecionarTodos(this)">Todos</button>
+  <button onclick="procura_usuarios()">Excluir</button>
+</div>
+
+
+<!-- Adaptação1 - Fim -->
+
+<table class="table table-hover" id="tabela_usuarios">
 
 <tr>
+  <td></td>
 	<td><strong>Nome</strong></td>
 	<td><strong>Data registro</strong></td>
 	<td></td>
@@ -44,7 +68,8 @@
 <?php
  foreach ($this->registros as $clientes):
 ?>
-	<tr>
+	<tr class="ck_user<?php echo $clientes['id'] ?>">
+    <td > <input class="checkbox<?php echo $clientes['id'] ?>" type="checkbox" name="vehicle" value="<?php echo $clientes['id'] ?>" > </td>
 		<td> <?php echo $clientes['nome']; ?> </td>
 		<td><?php echo date( 'd/m/Y',strtotime($clientes['data'])); ?></td>
 		<td> <a href="<?php echo $this->baseUrl("admin/clientes/editar/id/" . $clientes['id']); ?>"><button class="btn btn-info btn-xs">  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar</button> </a>
@@ -59,6 +84,79 @@
  ?>
 
 </table>
+
+<script type="text/javascript">
+  var tabelaUser = "tabela_usuarios";
+
+  //marca todos os checkbox dos usuários
+  function selecionarTodos(obj) {
+    var valor;
+
+    container = document.getElementById(tabelaUser);
+    items = container.getElementsByTagName('input');
+    label = obj.innerHTML; // Valor presente no botão. Poder ser todos, ou nenhum
+    if (label == "Todos") {
+      obj.innerHTML = "Nenhum";
+      valor = true;
+    }else {
+      obj.innerHTML = "Todos";
+      valor = false;
+    }
+
+    for (var j = 0; j < items.length; j++) {
+        //Se o elemento está visível na página
+        if(  $(items[j]).is(":visible") == true )
+        {  
+             items[j].checked = valor;
+        }
+
+    }
+
+  }
+
+  //Procura usuários que estão selecionados, para cumprir com
+  //uma determinada ação
+  function procura_usuarios() {
+    if (!confirm('Deseja realmente excluir os clientes?')) {
+        return false;
+    }
+
+    var anchor = null;
+    var container;
+    var items;
+    var resultado;
+    resultado = '';
+
+    container = document.getElementById(tabelaUser);
+    items = container.getElementsByTagName('input');
+
+    for (var j = 0; j < items.length; j++) {
+        if(items[j].checked == true) {
+          idCliente = items[j].value; // return string
+          $.ajax({
+            type: 'POST',
+            url: '/admin/clientes/ajaxexcluir', //Adaptação1 <= Especificar a url
+            data: { id : idCliente },
+            async: false,
+            success: function(response) {
+              resultado = resultado + response;
+            }
+
+          });
+
+          //Verifica se a classe 'resultado' existe
+          if (!$(".resultado")[0]){
+              $(".selecionados").after("<div class='resultado'></div>")
+          }
+
+          $('.resultado').html(resultado);
+          $(".ck_user" + idCliente).hide();
+          $(".checkbox" + idCliente).prop("checked", false);
+        }
+    }
+    return false
+  };
+</script>
 
 
 
