--- a/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
+++ b/application/modules/admin/views/scripts/funcionarios/visualizar.phtml
@@ -99,11 +99,10 @@
     var user_input;
     user_input = document.getElementsByClassName("find_user")[0].value.trim();
     if(user_input.length != 0) {
+      window.location.replace("/admin/funcionarios/visualizar/procurar/" + user_input);
+    } else {
       window.location.replace("/admin/funcionarios/visualizar");
-
     }
-    
-
   }
 
 
@@ -179,10 +178,10 @@
 </script>
 
 <?php
-    echo $this->paginationControl(
+    echo $this->paginationControl (
                 $this->registros,
                 'Sliding',
                 'paginator.phtml'
-            );
+          );
 
 ?>
